--- a/lin/.eslintrc
+++ b/lin/.eslintrc
@@ -1,27 +1,11 @@
 {
-  "parserOptions": {
-    "ecmaVersion": 2021
-  },
   "env": {
     "es6": true
   },
+  "parserOptions": {
+    "sourceType": "module"
+  },
   "rules": {
-    "indent": [
-      "error",
-      2
-    ],
-    "linebreak-style": [
-      "error",
-      "linux"
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ],
-    "no-unused-vars": ["warn"]
+    "no-unused-vars": 1
   }
 }
