--- a/win/settings.json
+++ b/win/settings.json
@@ -8,11 +8,11 @@
                 "action": "copy",
                 "singleLine": false
             },
-            "keys": "ctrl+c"
+            "keys": "ctrl+shift+c"
         },
         {
             "command": "paste",
-            "keys": "ctrl+v"
+            "keys": "ctrl+shift+v"
         },
         {
             "command": "find",
@@ -20,7 +20,7 @@
         },
         {
             "command": "closePane",
-            "keys": "ctrl+w"
+            "keys": "ctrl+shift+w"
         },
         {
             "command": 
