--- a/lin/.eslintrc
+++ b/lin/.eslintrc
@@ -3,7 +3,8 @@
     "es6": true
   },
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaVersion": 2021
   },
   "rules": {
     "no-unused-vars": 1
