--- a/win/settings.json
+++ b/win/settings.json
@@ -46,15 +46,24 @@
     "alwaysOnTop": true,
     "copyFormatting": "none",
     "copyOnSelect": true,
-    "defaultProfile": "{2c4de342-38b7-51cf-b940-2309a097f518}",
+    "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
     "launchMode": "fullscreen",
     "profiles": 
     {
-        "defaults": {},
+        "defaults": 
+        {
+            "font": 
+            {
+                "face": "Fira Code"
+            },
+            "padding": "0",
+            "useAcrylic": true
+        },
         "list": 
         [
             {
                 "colorScheme": "Tango Dark",
+                "commandline": "C:\\Users\\aaron\\AppData\\Local\\Microsoft\\WindowsApps\\Microsoft.PowerShell_8wekyb3d8bbwe\\pwsh.exe",
                 "font": 
                 {
                     "face": "Fira Code"
@@ -62,8 +71,10 @@
                 "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
                 "hidden": false,
                 "name": "PowerShell",
+                "padding": "0",
                 "scrollbarState": "hidden",
                 "source": "Windows.Terminal.PowershellCore",
+                "startingDirectory": "C:\\Users\\aaron\\Development",
                 "useAcrylic": true
             },
             {
@@ -75,7 +86,7 @@
                 "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
                 "hidden": false,
                 "name": "Ubuntu",
-                "padding": "3",
+                "padding": "0",
                 "scrollbarState": "hidden",
                 "source": "Windows.Terminal.Wsl",
                 "useAcrylic": true
