--- a/lin/.eslintrc
+++ b/lin/.eslintrc
@@ -2,6 +2,9 @@
   "env": {
     "es6": true
   },
+  "extends": [
+    "plugin:react/recommended"
+  ]
   "parserOptions": {
     "sourceType": "module",
     "ecmaVersion": 2021
