--- a/config/win/settings.json
+++ b/config/win/settings.json
@@ -16,11 +16,11 @@
         },
         {
             "command": "find",
-            "keys": "ctrl+shift+f"
+            "keys": "ctrl+f"
         },
         {
             "command": "closePane",
-            "keys": "ctrl+shift+w"
+            "keys": "ctrl+w"
         },
         {
             "command": 
@@ -88,7 +88,8 @@
                 "name": "Ubuntu",
                 "padding": "0",
                 "scrollbarState": "hidden",
-                "source": "Windows.Terminal.Wsl",
+                "commandline": "wsl -d Ubuntu",
+                // "source": "Windows.Terminal.Wsl",
                 "useAcrylic": true
             }
         ]
