--- a/dotfiles/settings.json
+++ b/dotfiles/settings.json
@@ -40,8 +40,11 @@
             "keys": "ctrl+w"
         }
     ],
+    "alwaysOnTop": false,
+    "alwaysShowNotificationIcon": false,
+    "autoHideWindow": true,
     "copyFormatting": "none",
-    "copyOnSelect": false,
+    "copyOnSelect": true,
     "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
     "launchMode": "fullscreen",
     "minimizeToNotificationArea": true,
