--- a/dotfiles/settings.json
+++ b/dotfiles/settings.json
@@ -40,7 +40,7 @@
             "keys": "ctrl+w"
         }
     ],
-    "alwaysOnTop": false,
+    "alwaysOnTop": true,
     "alwaysShowNotificationIcon": false,
     "autoHideWindow": true,
     "compatibility.allowHeadless": true,
