--- a/dotfiles/config
+++ b/dotfiles/config
@@ -1,5 +1,4 @@
-HOST box1
-  User ubuntu
-  #IdentityFile ~/.ssh/id_rsa.pem
-  Hostname <BOX1'S IP>
-  Port <PORT>
+HOST vps1
+  User aaron
+  Hostname <VPS1_IP>
+  Port <SSH_PORT>
