--- a/dotfiles/config.toml
+++ b/dotfiles/config.toml
@@ -7,10 +7,18 @@ bufferline = "multiple"
 
 [keys.normal]
 esc = ["collapse_selection", "keep_primary_selection"]
-L = "hover"
+C-l = "hover"
+C-j = ":buffer-next"
+C-k = ":buffer-previous"
 
 [keys.select]
-L = "hover"
+C-l = "hover"
+C-j = ":buffer-next"
+C-k = ":buffer-previous"
+
+[keys.insert]
+C-j = ":buffer-next"
+C-k = ":buffer-previous"
 
 [editor.cursor-shape]
 insert = "bar"
