--- a/dotfiles/config.toml
+++ b/dotfiles/config.toml
@@ -4,9 +4,11 @@ theme = "dark_plus"
 line-number = "relative"
 mouse = false
 bufferline = "multiple"
+true-color = true # Fixes Helix on WSL
 
 [keys.normal]
 esc = ["collapse_selection", "keep_primary_selection"]
 
 [editor.cursor-shape]
 insert = "bar"
+select = "underline"
