--- a/shared/helix/config.toml
+++ b/shared/helix/config.toml
@@ -6,9 +6,12 @@ mouse = false
 bufferline = "multiple"
 true-color = true # Fixes Helix on WSL
 
-[keys.normal]
-esc = ["collapse_selection", "keep_primary_selection"]
-
 [editor.cursor-shape]
 insert = "bar"
 select = "underline"
+
+# [file-picker] # Helix 25.07.1 or later
+# hidden = false
+
+[keys.normal]
+esc = ["collapse_selection", "keep_primary_selection"]
